refactor: simplify generics, remove unused fields, and streamline logic in Robotics, Transport, and Builders modules